@@ -4,7 +4,7 @@
 	
 	<groupId>fr.openwide.core.parents</groupId>
 	<artifactId>owsi-core-parent-base</artifactId>
-	<version>0.9-SNAPSHOT</version>
+	<version>0.8.8-SNAPSHOT</version>
 	<packaging>pom</packaging>
 	
 	<name>OWSI Core - Parent - Base</name>
@@ -12,86 +12,93 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+		<maven.build.timestamp.format>yyyyMMdd</maven.build.timestamp.format>
 		
 		<jdk.version>1.6</jdk.version>
+		
+		<minimal.maven.version>3.0.4</minimal.maven.version>
 		
 		<generated-sources.directory>target/generated-sources/apt</generated-sources.directory>
 		<generated-sources-test.directory>target/generated-sources-test/apt</generated-sources-test.directory>
 		
 		<owsi-core.version>${project.version}</owsi-core.version>
 		
-		<owsi-core.spring.version>3.2.1.RELEASE</owsi-core.spring.version>
-		<owsi-core.aspectj.version>1.7.1</owsi-core.aspectj.version>
+		<owsi-core.spring.version>3.2.6.RELEASE</owsi-core.spring.version>
+		<owsi-core.aspectj.version>1.7.4</owsi-core.aspectj.version>
 
-		<owsi-core.hibernate-core.version>4.1.6.Final</owsi-core.hibernate-core.version>
+		<owsi-core.hibernate-core.version>4.2.8.Final</owsi-core.hibernate-core.version>
 		<owsi-core.hibernate-jpa-2.0-api.version>1.0.1.Final</owsi-core.hibernate-jpa-2.0-api.version>
-		<owsi-core.hibernate-jpamodelgen.version>1.2.0.Final</owsi-core.hibernate-jpamodelgen.version>
-		<owsi-core.jboss-logging.version>3.1.0.GA</owsi-core.jboss-logging.version>
-		<owsi-core.tomcat-jdbc.version>7.0.34</owsi-core.tomcat-jdbc.version>
+		<owsi-core.hibernate-jpamodelgen.version>1.3.0.Final</owsi-core.hibernate-jpamodelgen.version>
+		<owsi-core.hibernate-commons-annotations.version>4.0.4.Final</owsi-core.hibernate-commons-annotations.version>
+		<owsi-core.jboss-logging.version>3.1.4.GA</owsi-core.jboss-logging.version>
+		<owsi-core.tomcat-jdbc.version>7.0.47</owsi-core.tomcat-jdbc.version>
 		<owsi-core.hibernate-ehcache.version>${owsi-core.hibernate-core.version}</owsi-core.hibernate-ehcache.version>
-		<owsi-core.ehcache.version>2.4.8</owsi-core.ehcache.version>
-		<owsi-core.querydsl.version>2.9.0</owsi-core.querydsl.version>
+		<owsi-core.ehcache.version>2.6.6</owsi-core.ehcache.version>
+		<owsi-core.querydsl.version>3.3.0</owsi-core.querydsl.version>
 		
-		<owsi-core.guava.version>13.0.1</owsi-core.guava.version>
+		<owsi-core.guava.version>16.0</owsi-core.guava.version>
 		
 		<owsi-core.postgresql.version>9.0-801.jdbc3</owsi-core.postgresql.version>
 		<owsi-core.oracle10g.version>10.2.0.5</owsi-core.oracle10g.version>
 		<owsi-core.mysql.version>5.1.14</owsi-core.mysql.version>
 		
 		<owsi-core.cglib.version>2.2.2</owsi-core.cglib.version>
-		<owsi-core.javassist.version>3.15.0-GA</owsi-core.javassist.version>
+		<owsi-core.javassist.version>3.18.1-GA</owsi-core.javassist.version>
 		<owsi-core.asm.version>3.3.1</owsi-core.asm.version>
 		
 		<owsi-core.bindgen.version>2.23</owsi-core.bindgen.version>
 		
-		<owsi-core.spring-security.version>3.1.3.RELEASE</owsi-core.spring-security.version>
+		<owsi-core.spring-security.version>3.1.4.RELEASE</owsi-core.spring-security.version>
 		
-		<owsi-core.spring-ldap.version>1.3.1.RELEASE</owsi-core.spring-ldap.version>
+		<owsi-core.spring-ldap.version>1.3.2.RELEASE</owsi-core.spring-ldap.version>
 		
-		<owsi-core.hibernate-search.version>4.2.0.Final</owsi-core.hibernate-search.version>
+		<owsi-core.hibernate-search.version>4.4.2.Final</owsi-core.hibernate-search.version>
 		<owsi-core.lucene.version>3.6.2</owsi-core.lucene.version>
 		
-		<owsi-core.quartz.version>2.1.6</owsi-core.quartz.version>
+		<owsi-core.quartz.version>2.2.1</owsi-core.quartz.version>
 		
 		<owsi-core.javatuples.version>1.2</owsi-core.javatuples.version>
 		
 		<owsi-core.commons-io.version>2.4</owsi-core.commons-io.version>
 		<owsi-core.commons-lang.version>2.6</owsi-core.commons-lang.version>
-		<owsi-core.commons-lang3.version>3.1</owsi-core.commons-lang3.version>
+		<owsi-core.commons-lang3.version>3.2.1</owsi-core.commons-lang3.version>
 		<owsi-core.commons-cli.version>1.2</owsi-core.commons-cli.version>
-		<owsi-core.commons-codec.version>1.7</owsi-core.commons-codec.version>
-		<owsi-core.commons-exec.version>1.1</owsi-core.commons-exec.version>
+		<owsi-core.commons-codec.version>1.9</owsi-core.commons-codec.version>
+		<owsi-core.commons-exec.version>1.2</owsi-core.commons-exec.version>
+		<owsi-core.commons-compress.version>1.5</owsi-core.commons-compress.version>
 		
 		<owsi-core.jta.version>1.1</owsi-core.jta.version>
 		<owsi-core.javax-mail.version>1.4.5</owsi-core.javax-mail.version>
 		
-		<owsi-core.slf4j.version>1.7.2</owsi-core.slf4j.version>
+		<owsi-core.slf4j.version>1.7.5</owsi-core.slf4j.version>
 		<owsi-core.log4j.version>1.2.17</owsi-core.log4j.version>
 		
 		<owsi-core.opencsv.version>2.3</owsi-core.opencsv.version>
-		<owsi-core.freemarker.version>2.3.19</owsi-core.freemarker.version>
+		<owsi-core.freemarker.version>2.3.20</owsi-core.freemarker.version>
 		<owsi-core.dom4j.version>1.6.1</owsi-core.dom4j.version>
 		
 		<!-- BUG Apache POI en 3.8: https://issues.apache.org/bugzilla/show_bug.cgi?id=53028
 		normalement corrigé en 3.9 : on verra -->
 		<owsi-core.poi.version>3.9</owsi-core.poi.version>
 		
-		<owsi-core.itext.version>2.0.8</owsi-core.itext.version> <!-- c'est xhtmlrenderer qui pose la contrainte -->
+		<owsi-core.itext.version>2.1.7</owsi-core.itext.version>
 		<owsi-core.json-lib.version>2.3</owsi-core.json-lib.version>
-		<owsi-core.jackson.version>1.9.11</owsi-core.jackson.version>
-		<owsi-core.jackson2-core.version>2.1.3</owsi-core.jackson2-core.version>
-		<owsi-core.jackson2-annotations.version>2.1.2</owsi-core.jackson2-annotations.version>
-		<owsi-core.jackson2-databind.version>2.1.3</owsi-core.jackson2-databind.version>
-		<owsi-core.jackson2-jaxrs.version>2.1.2</owsi-core.jackson2-jaxrs.version>
-		<owsi-core.jackson2-dataformat-xml.version>2.1.3</owsi-core.jackson2-dataformat-xml.version>
-		<owsi-core.truezip.version>7.7.1</owsi-core.truezip.version>
-		<owsi-core.xhtmlrenderer.version>R8</owsi-core.xhtmlrenderer.version>
+		<owsi-core.jackson.version>1.9.13</owsi-core.jackson.version>
+		<owsi-core.jackson2-core.version>2.3.1</owsi-core.jackson2-core.version>
+		<owsi-core.jackson2-annotations.version>2.3.0</owsi-core.jackson2-annotations.version>
+		<owsi-core.jackson2-databind.version>${owsi-core.jackson2-core.version}</owsi-core.jackson2-databind.version>
+		<owsi-core.jackson2-jaxrs.version>${owsi-core.jackson2-core.version}</owsi-core.jackson2-jaxrs.version>
+		<owsi-core.jackson2-dataformat-xml.version>${owsi-core.jackson2-core.version}</owsi-core.jackson2-dataformat-xml.version>
+		<owsi-core.truezip.version>7.7.5</owsi-core.truezip.version>
+		<owsi-core.flying-saucer.version>9.0.4</owsi-core.flying-saucer.version>
 		<owsi-core.jfreechart.version>1.0.14</owsi-core.jfreechart.version>
 		<owsi-core.imageinfo.version>1.9</owsi-core.imageinfo.version>
-		<owsi-core.jsoup.version>1.7.2</owsi-core.jsoup.version>
+		<owsi-core.jsoup.version>1.7.3</owsi-core.jsoup.version>
 		<owsi-core.rhino.version>1.7R4</owsi-core.rhino.version>
+		<owsi-core.httpclient.version>4.3.2</owsi-core.httpclient.version>
 		
-		<owsi-core.jersey.version>1.17</owsi-core.jersey.version>
+		<owsi-core.jersey.version>1.18</owsi-core.jersey.version>
+		<owsi-core.jersey2.version>2.5</owsi-core.jersey2.version>
 		
 		<owsi-core.jstl.version>1.2</owsi-core.jstl.version>
 		<owsi-core.jsp-api.version>2.2</owsi-core.jsp-api.version>
@@ -101,34 +108,45 @@
 		<owsi-core.sitemesh.version>2.4.2</owsi-core.sitemesh.version>
 		
 		<owsi-core.javax-activation.version>1.1.1</owsi-core.javax-activation.version>
-		<owsi-core.javax-validation-api.version>1.0.0.GA</owsi-core.javax-validation-api.version>
+		<owsi-core.javax-validation-api.version>1.1.0.Final</owsi-core.javax-validation-api.version>
 		
-		<owsi-core.wicket.version>6.5.0</owsi-core.wicket.version>
-		<owsi-core.wiquery.version>6.2.0</owsi-core.wiquery.version>
-		<owsi-core.wicket-select2.version>1.1.3.owsi1</owsi-core.wicket-select2.version>
+		<owsi-core.wicket.version>6.12.0</owsi-core.wicket.version>
+		<owsi-core.wiquery.version>6.12.0</owsi-core.wiquery.version>
+		<owsi-core.wicket-select2.version>1.1.9</owsi-core.wicket-select2.version>
 		
-		<owsi-core.lesscss-engine.version>1.3.3</owsi-core.lesscss-engine.version>
+		<owsi-core.lesscss-engine.version>1.4.2</owsi-core.lesscss-engine.version>
 		
 		<owsi-core.junit.version>4.11</owsi-core.junit.version>
-		<owsi-core.grizzly.version>1.9.55</owsi-core.grizzly.version>
+		<owsi-core.grizzly.version>1.9.59</owsi-core.grizzly.version>
 		
-		<owsi-core.maven-compiler-plugin.version>3.0</owsi-core.maven-compiler-plugin.version>
+		<owsi-core.localization-properties-consistency-maven-plugin.version>1.0.0</owsi-core.localization-properties-consistency-maven-plugin.version>
+		
+		<owsi-core.maven-compiler-plugin.version>3.1</owsi-core.maven-compiler-plugin.version>
 		<owsi-core.maven-resources-plugin.version>2.6</owsi-core.maven-resources-plugin.version>
-		<owsi-core.maven-surefire-plugin.version>2.13</owsi-core.maven-surefire-plugin.version>
-		<owsi-core.maven-install-plugin.version>2.4</owsi-core.maven-install-plugin.version>
-		<owsi-core.maven-release-plugin.version>2.4</owsi-core.maven-release-plugin.version>
-		<owsi-core.maven-war-plugin.version>2.3</owsi-core.maven-war-plugin.version>
+		<owsi-core.maven-surefire-plugin.version>2.16</owsi-core.maven-surefire-plugin.version>
+		<owsi-core.maven-install-plugin.version>2.5.1</owsi-core.maven-install-plugin.version>
+		<owsi-core.maven-release-plugin.version>2.4.2</owsi-core.maven-release-plugin.version>
+		<owsi-core.maven-war-plugin.version>2.4</owsi-core.maven-war-plugin.version>
 		<owsi-core.maven-assembly-plugin.version>2.4</owsi-core.maven-assembly-plugin.version>
 		<owsi-core.maven-jar-plugin.version>2.4</owsi-core.maven-jar-plugin.version>
-		<owsi-core.maven-deploy-plugin.version>2.7</owsi-core.maven-deploy-plugin.version>
+		<owsi-core.maven-deploy-plugin.version>2.8.1</owsi-core.maven-deploy-plugin.version>
 		<owsi-core.maven-source-plugin.version>2.2.1</owsi-core.maven-source-plugin.version>
-		<owsi-core.maven-javadoc-plugin.version>2.9</owsi-core.maven-javadoc-plugin.version>
+		<owsi-core.maven-javadoc-plugin.version>2.9.1</owsi-core.maven-javadoc-plugin.version>
+		<owsi-core.maven-enforcer-plugin.version>1.3.1</owsi-core.maven-enforcer-plugin.version>
 		
-		<owsi-core.maven-enforcer-plugin.version>1.2</owsi-core.maven-enforcer-plugin.version>
-		<owsi-core.maven-processor-plugin.version>2.1.0</owsi-core.maven-processor-plugin.version>
-		<owsi-core.maven-yui-compressor-plugin.version>1.3.2</owsi-core.maven-yui-compressor-plugin.version>
+		<owsi-core.wagon-maven-plugin.version>1.0-beta-4</owsi-core.wagon-maven-plugin.version>
+		<owsi-core.wagon-ssh-external-plugin.version>2.6</owsi-core.wagon-ssh-external-plugin.version>
+		
+		<owsi-core.maven-processor-plugin.version>2.2.4</owsi-core.maven-processor-plugin.version>
+		<owsi-core.maven-yui-compressor-plugin.version>1.3.3</owsi-core.maven-yui-compressor-plugin.version>
 		<owsi-core.aspectj-maven-plugin.version>1.4</owsi-core.aspectj-maven-plugin.version>
+		
+		<owsi-core.wqplot.version>6.1.1.owsi3</owsi-core.wqplot.version>
 	</properties>
+	
+	<prerequisites>
+		<maven>${minimal.maven.version}</maven>
+	</prerequisites>
 	
 	<dependencyManagement>
 		<dependencies>
@@ -198,6 +216,12 @@
 				
 				<dependency>
 					<groupId>org.apache.commons</groupId>
+					<artifactId>commons-compress</artifactId>
+					<version>${owsi-core.commons-compress.version}</version>
+				</dependency>
+				
+				<dependency>
+					<groupId>commons-cli</groupId>
 					<artifactId>commons-cli</artifactId>
 					<version>${owsi-core.commons-cli.version}</version>
 				</dependency>
@@ -423,6 +447,12 @@
 					</dependency>
 					
 					<dependency>
+						<groupId>org.hibernate.common</groupId>
+						<artifactId>hibernate-commons-annotations</artifactId>
+						<version>${owsi-core.hibernate-commons-annotations.version}</version>
+					</dependency>
+					
+					<dependency>
 						<groupId>org.jboss.logging</groupId>
 						<artifactId>jboss-logging</artifactId>
 						<version>${owsi-core.jboss-logging.version}</version>
@@ -616,13 +646,37 @@
 						</exclusion>
 					</exclusions>
 				</dependency>
+				
+				<dependency>
+					<groupId>org.apache.httpcomponents</groupId>
+					<artifactId>httpclient</artifactId>
+					<version>${owsi-core.httpclient.version}</version>
+					<exclusions>
+						<exclusion>
+							<groupId>commons-logging</groupId>
+							<artifactId>commons-logging</artifactId>
+						</exclusion>
+					</exclusions>
+				</dependency>
+				
+				<dependency>
+					<groupId>org.apache.httpcomponents</groupId>
+					<artifactId>httpmime</artifactId>
+					<version>${owsi-core.httpclient.version}</version>
+					<exclusions>
+						<exclusion>
+							<artifactId>commons-logging</artifactId>
+							<groupId>commons-logging</groupId>
+						</exclusion>
+					</exclusions>
+				</dependency>
 			
 			<!-- Exports divers -->
 			
 				<dependency>
 					<groupId>org.xhtmlrenderer</groupId>
-					<artifactId>core-renderer</artifactId>
-					<version>${owsi-core.xhtmlrenderer.version}</version>
+					<artifactId>flying-saucer-pdf</artifactId>
+					<version>${owsi-core.flying-saucer.version}</version>
 				</dependency>
 				
 				<dependency>
@@ -812,6 +866,32 @@
 					<version>${owsi-core.jersey.version}</version>
 				</dependency>
 			
+			<!-- Jersey 2 -->
+			
+				<dependency>
+					<groupId>org.glassfish.jersey.core</groupId>
+					<artifactId>jersey-server</artifactId>
+					<version>${owsi-core.jersey2.version}</version>
+				</dependency>
+				
+				<dependency>
+					<groupId>org.glassfish.jersey.core</groupId>
+					<artifactId>jersey-client</artifactId>
+					<version>${owsi-core.jersey2.version}</version>
+				</dependency>
+				
+				<dependency>
+					<groupId>org.glassfish.jersey.media</groupId>
+					<artifactId>jersey-media-multipart</artifactId>
+					<version>${owsi-core.jersey2.version}</version>
+				</dependency>
+				
+				<dependency>
+					<groupId>org.glassfish.jersey.ext</groupId>
+					<artifactId>jersey-spring3</artifactId>
+					<version>${owsi-core.jersey2.version}</version>
+				</dependency>
+			
 			<!-- Servlet / JSP -->
 			
 				<dependency>
@@ -885,6 +965,26 @@
 					<version>${owsi-core.jersey.version}</version>
 					<scope>test</scope>
 				</dependency>
+				
+				<dependency>
+					<groupId>org.glassfish.jersey.test-framework.providers</groupId>
+					<artifactId>jersey-test-framework-provider-grizzly2</artifactId>
+					<version>${owsi-core.jersey2.version}</version>
+					<scope>test</scope>
+				</dependency>
+				
+				<dependency>
+					<groupId>org.glassfish.jersey.containers</groupId>
+					<artifactId>jersey-container-grizzly2-servlet</artifactId>
+					<version>${owsi-core.jersey2.version}</version>
+					<scope>test</scope>
+					<exclusions>
+						<exclusion>
+							<groupId>javax.servlet</groupId>
+							<artifactId>servlet-api</artifactId>
+						</exclusion>
+					</exclusions>
+				</dependency>
 			
 		</dependencies>
 	</dependencyManagement>
@@ -919,10 +1019,10 @@
 									</excludes>
 								</bannedDependencies>
 								<requireMavenVersion>
-									<version>[3.0.4,)</version>
+									<version>[${minimal.maven.version},)</version>
 								</requireMavenVersion>
 								<requireJavaVersion>
-									<version>1.6</version>
+									<version>${jdk.version}</version>
 								</requireJavaVersion>
 							</rules>
 						</configuration>
@@ -932,6 +1032,19 @@
 		</plugins>
 		<pluginManagement>
 			<plugins>
+				<plugin>
+					<groupId>fr.openwide.maven.plugins</groupId>
+					<artifactId>localization-properties-consistency-maven-plugin</artifactId>
+					<version>${owsi-core.localization-properties-consistency-maven-plugin.version}</version>
+					<executions>
+						<execution>
+							<id>scan</id>
+							<goals>
+								<goal>scan</goal>
+							</goals>
+						</execution>
+					</executions>
+				</plugin>
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-compiler-plugin</artifactId>
@@ -973,6 +1086,8 @@
 							<nonFilteredFileExtension>svg</nonFilteredFileExtension>
 							<nonFilteredFileExtension>psd</nonFilteredFileExtension>
 							<nonFilteredFileExtension>ftl</nonFilteredFileExtension>
+							<!-- Fichier de licence Alfresco -->
+							<nonFilteredFileExtension>lic</nonFilteredFileExtension>
 						</nonFilteredFileExtensions>
 					</configuration>
 				</plugin>
@@ -980,6 +1095,14 @@
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-surefire-plugin</artifactId>
 					<version>${owsi-core.maven-surefire-plugin.version}</version>
+					<configuration>
+						<argLine>-Xms512m -Xmx1024m -XX:MaxPermSize=256m</argLine>
+					</configuration>
+				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-jar-plugin</artifactId>
+					<version>${owsi-core.maven-jar-plugin.version}</version>
 				</plugin>
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
@@ -1093,6 +1216,18 @@
 				</plugin>
 				<plugin>
 					<groupId>org.codehaus.mojo</groupId>
+					<artifactId>wagon-maven-plugin</artifactId>
+					<version>${owsi-core.wagon-maven-plugin.version}</version>
+					<dependencies>
+						<dependency>
+							<groupId>org.apache.maven.wagon</groupId>
+							<artifactId>wagon-ssh-external</artifactId>
+							<version>${owsi-core.wagon-ssh-external-plugin.version}</version>
+						</dependency>
+					</dependencies>
+				</plugin>
+				<plugin>
+					<groupId>org.codehaus.mojo</groupId>
 					<artifactId>cobertura-maven-plugin</artifactId>
 					<!-- on laisse maven choisir la version -->
 					<configuration>
@@ -1139,6 +1274,19 @@
 										<versionRange>[1.0,)</versionRange>
 										<goals>
 											<goal>enforce</goal>
+										</goals>
+									</pluginExecutionFilter>
+									<action>
+										<ignore />
+									</action>
+								</pluginExecution>
+								<pluginExecution>
+									<pluginExecutionFilter>
+										<groupId>fr.openwide.maven.plugins</groupId>
+										<artifactId>localization-properties-consistency-maven-plugin</artifactId>
+										<versionRange>[1.0.0,)</versionRange>
+										<goals>
+											<goal>scan</goal>
 										</goals>
 									</pluginExecutionFilter>
 									<action>
@@ -1252,9 +1400,31 @@
 				<enabled>false</enabled>
 			</releases>
 		</repository>
+		
 	</repositories>
 	
 	<pluginRepositories>
+		<pluginRepository>
+			<id>nexus-owsi-core</id>
+			<name>Nexus OWSI Core</name>
+			<url>https://projects.openwide.fr/services/nexus/content/repositories/owsi-core</url>
+			<snapshots>
+				<enabled>false</enabled>
+			</snapshots>
+		</pluginRepository>
+		
+		<pluginRepository>
+			<id>nexus-owsi-core-snapshots</id>
+			<name>Nexus OWSI Core Snapshots</name>
+			<url>https://projects.openwide.fr/services/nexus/content/repositories/owsi-core-snapshots</url>
+			<snapshots>
+				<enabled>true</enabled>
+			</snapshots>
+			<releases>
+				<enabled>false</enabled>
+			</releases>
+		</pluginRepository>
+		
 		<pluginRepository>
 			<id>org.bindgen</id>
 			<name>Bindgen Repository</name>
